--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,5 @@
     <string name="history_description">Повтори прорешанное</string>
     <string name="lexeme">Значение функции в точках</string>
     <string name="lexeme_description">Посчитать значение в одной или нескольких точках</string>
+    <string name="lexeme_english">Lexeme</string>
 </resources>
