--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="lexeme_description">Посчитать значение в одной или нескольких точках</string>
     <string name="lexeme_english">Lexeme</string>
     <string name="compute">COMPUTE</string>
+    <string name="settings">Settings</string>
 </resources>
