Текст больше на загораживается кнопками, немного обновлен дизайн

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,6 @@
     <string name="lexeme_english">Lexeme</string>
     <string name="compute">COMPUTE</string>
     <string name="settings">Settings</string>
+    <string name="algebra_description"> Практика по линейной алгебре. В этом разделе вы можете работать с базовыми операциями над матрицами: умножение, определитель, обратная, ранг. Так же можете искать жорданову форму и жорданов базис. При решении вы можете выбрать способ, решение которым хотите увидеть. Так же вы можете задать способ по умолчанию в настройках</string>
+
 </resources>
