--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">FlameMathNew</string>
+    <string name="app_name">Math Ultra</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
@@ -30,5 +30,7 @@
     <string name="compute">COMPUTE</string>
     <string name="settings">Settings</string>
     <string name="algebra_description"> Практика по линейной алгебре. В этом разделе вы можете работать с базовыми операциями над матрицами: умножение, определитель, обратная, ранг. Так же можете искать жорданову форму и жорданов базис. При решении вы можете выбрать способ, решение которым хотите увидеть. Так же вы можете задать способ по умолчанию в настройках</string>
+    <string name="mult">Умножить</string>
+    <string name="slau">СЛАУ</string>
 
 </resources>
